PRIMEIRO COMMIT DO SAMUEL

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     </header>
     <article>
         <h2>ARTIGO 001</h2>
-        <p>TEXTO 001</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel aspernatur rem maiores repudiandae eum fugit nam cupiditate esse eius, distinctio autem ipsam voluptatem blanditiis, quae consequatur aliquid et tempore asperiores.</p>
     </article>
     <article>
         <h2>ARTIGO 002</h2>
-        <p>TEXTO 002</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus libero eaque nemo cupiditate, et esse quod maiores in, quis est eum nesciunt expedita iure, dolorum delectus incidunt. Libero, blanditiis doloremque?</p>
     </article>
 </body>
 </html>
